--- a/manifest.yml
+++ b/manifest.yml
@@ -3,5 +3,5 @@ applications:
   memory: 64M
   instances: 1
   name: premier-site
-  route: premier-site-${random-word}.mybluemix.net
+  route: premier-site-${random-word}
   buildpack: php_buildpack
